# smrf

./: .editorconfig  .gitignore  AUTHORS.md  MANIFEST.in  Makefile  README.md  project.toml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/workflows/: new_pypi_release.yml  qaqc.yml  unittest.yml
docs/api/: smrf.output.rst
docs/user_guide/: auto_config.rst
smrf/: __init__.py
smrf/cli/: update_configs
smrf/data/: __init__.py  gridded_input.py  hrrr_grib.py  input_data.py  load_topo.py  netcdf.py  read_netcdf.py  wrf.py
smrf/data/hrrr/: __init__.py  file_handler.py  file_loader.py  grib_file.py  grib_file_gdal.py  grib_file_variables.py  grib_file_xarray.py
smrf/data/input/: __init__.py  csv.py  hrrr_grib.py  netcdf.py  wrf.py
smrf/distribute/: __init__.py  air_temp.py  albedo.py  cloud_factor.py  image_data.py  precipitation.py  soil_temp.py  solar.py  solar_hrrr.py  thermal.py  thermal_hrrr.py  vapor_pressure.py  variable_base.py
smrf/distribute/wind/: __init__.py  wind.py  wind_ninja.py  winstral.py
smrf/envphys/: air_temp.py  albedo.py  constants.py  storms.py  sunang.py
smrf/envphys/core/: envphys_c.c
smrf/envphys/nasde_model/: susong_1999.py
smrf/envphys/solar/: cloud.py  model.py  net_solar.py  toporad.py  toposplit.pyx  vegetation.py
smrf/envphys/thermal/: clear_sky.py  cloud.py  vegetation.py
smrf/framework/: CoreConfig.ini  ascii_art.py  changelog.ini  model_framework.py  recipes.ini
smrf/output/: output_netcdf.py
smrf/spatial/: __init__.py  grid.py  idw.py  kriging.py
smrf/spatial/dk/: __init__.py  detrended_kriging.c  dk.py
smrf/tests/: smrf_config.py  smrf_output_test.py  smrf_test_case.py  smrf_test_case_lakes.py  test_full_smrf.py  test_lakes.py  test_lakes_wind_ninja.py  test_model_framework.py  test_rme.py
smrf/tests/basins/: Gold-NetCDF-Compare.ipynb  Topo-Compare.ipynb
smrf/tests/basins/Lakes/: config.ini
smrf/tests/basins/Lakes/gold_hrrr/: gold_config.ini  hrrr_solar.nc  net_solar.nc  net_solar_hrrr.nc  net_solar_hrrr_albedo.nc  net_solar_hrrr_vegetation.nc  percent_snow.nc  precip.nc  precip_temp.nc  snow_density.nc  solar_k.nc  thermal.nc  thermal_hrrr.nc  thermal_hrrr_vegetation.nc
smrf/tests/basins/Lakes/input/forcing/20191001/: albedo.nc
smrf/tests/basins/Lakes/input/hrrr.20191001/: hrrr.t09z.wrfsfcf06.grib2  hrrr.t10z.wrfsfcf06.grib2  hrrr.t11z.wrfsfcf06.grib2  hrrr.t12z.wrfsfcf06.grib2  hrrr.t14z.wrfsfcf01.apcp06.grib2  hrrr.t14z.wrfsfcf06.grib2  hrrr.t15z.wrfsfcf06.grib2  hrrr.t16z.wrfsfcf01.apcp06.grib2  hrrr.t16z.wrfsfcf06.grib2  hrrr.t17z.wrfsfcf06.grib2
smrf/tests/basins/Lakes/topo/: topo.nc
smrf/tests/basins/RME/: config.ini
smrf/tests/basins/RME/gold/: gold_config.ini  percent_snow.nc  precip.nc  precip_temp.nc  snow_density.nc
smrf/tests/basins/RME/gold_hrrr/: gold_config.ini  percent_snow.nc  precip.nc  precip_temp.nc  snow_density.nc
smrf/tests/basins/RME/gridded/hrrr_test/hrrr.20180722/: hrrr.t15z.wrfsfcf01.apcp06.grib2  hrrr.t17z.wrfsfcf01.apcp06.grib2  hrrr.t18z.wrfsfcf01.apcp06.grib2  hrrr.t19z.wrfsfcf01.apcp06.grib2
smrf/tests/basins/RME/topo/: topo.nc
smrf/tests/data/: test_csv.py  test_gridded_input.py  test_hrrr_grib.py  test_input_data.py  test_load_data.py  test_netcdf.py  test_read_netcdf.py  test_topo.py  test_wrf.py
smrf/tests/data/hrrr/: test_file_handler.py  test_file_loader.py  test_grib_file.py  test_grib_file_gdal.py  test_grib_file_xarray.py  test_hrrr.py
smrf/tests/data/input/: test_gridded_input.py  test_hrrr_grib.py
smrf/tests/distribute/: __init__.py  test_air_temp.py  test_albedo.py  test_image_data.py  test_solar.py  test_solar_hrrr.py  test_thermal.py  test_thermal_hrrr.py  test_variable_base.py
smrf/tests/distribute/wind/: test_wind.py  test_wind_ninja.py
smrf/tests/envphys/: test_air_temp.py  test_albedo.py  test_snow.py  test_storm.py
smrf/tests/envphys/nasde_model/: test_susong_1999.py
smrf/tests/envphys/solar/: test_net_solar.py  test_toporad.py
smrf/tests/framework/: test_model_framework.py
smrf/tests/output/: test_netcdf.py  test_output_variables.py
smrf/tests/recipes/: test_wind_recipes.py
smrf/tests/scripts/: test_gen_maxus.py  test_run_smrf.py
smrf/tests/utils/: test_backup_input.py
smrf/utils/: __init__.py  utils.py
smrf/utils/wind/: wind_c.c
