[build-system]
requires = [
    "setuptools",
    "setuptools_scm>=8",
    "wheel",
    "numpy<1.23",
    "cython",
]

[project]
name = "smrf"
description = "Forcing input framework for iSnobal"
dynamic = [
    "version"
]
requires-python = ">=3.9"
readme = "README.md"
keywords = [
    'iSnobal',
    'Snow',
    'Modeling'
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "coloredlogs",
    "cfgrib",
    "inicheck<0.10.0",
    "netCDF4",
    "numpy<1.23",
    "pandas<1.4",
    "pykrige>=1.5.0",
    "pytz",
    "regex<2021",
    "scipy<1.12",
    "spatialnc>=0.2.12",
    "topocalc @ git+https://github.com/iSnobal/topocalc.git@20251105",
    "utm==0.5",
    "xarray<2023",
]

[project.scripts]
run_smrf = 'smrf.cli.run_smrf:run'

[project.optional-dependencies]
dev = [
    "mock",
]
docs = [
    'Sphinx>=3.0,<=4.0',
    'pydata-sphinx-theme',
    'sphinxcontrib-bibtex>=1.0',
    'sphinxcontrib-websupport>=1.0.1',
]
all = ["smrf-dev[dev,docs]"]

[tool.setuptools.packages.find]
where = [""]

[tool.setuptools.package-data]
smrf = [
    'framework/CoreConfig.ini',
    'framework/.qotw',
    'framework/recipes.ini',
    'framework/changelog.ini',
]

[tool.setuptools_scm]
local_scheme = 'node-and-date'
write_to = "smrf/version.py"

[tool.hatch.build.targets.sdist]
exclude = ["/smrf/tests"]
